tests/ui/closures/issue-25439.stderr
error[E0644]: closure/coroutine type that references itself
  --> $DIR/issue-25439.rs:8:9
   |
LL |     fix(|_, x| x);
   |         ^^^^^^ cyclic type of infinite size
   |
   = note: closures cannot capture themselves or take themselves as argument;
           this error may be the result of a recent compiler bug-fix,
           see issue #46062 <https://github.com/rust-lang/rust/issues/46062>
           for more information
note: required by a bound in `fix`
  --> $DIR/issue-25439.rs:3:33
   |
LL | fn fix<F>(f: F) -> i32 where F: Fn(Helper<F>, i32) -> i32 {
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `fix`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0644`.
